Nova funcionalidade X do projecto

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
-	<body>
+<body>
 		<p>MEU BEM MEU MAL</p>
 		<h1>MEU DEUS MINHA VIDA</h1>
-	</body>
+		<h2>Teste de fogo</h2>
+</body>
 </head>
